--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-
-<!-- saved from url=(0250)file:///C:/Users/vlad/Desktop/Test/%D0%A1%D1%82%D1%83%D0%B4%D0%B5%D0%BD%D1%87%D0%B5%D1%81%D0%BA%D0%B0%D1%8F%20%D1%87%D0%B0%D1%81%D1%82%D1%8C%20-%20%D1%81%D1%82%D1%80%D0%B0%D0%BD%D0%B8%D1%86%D0%B0%20%D1%8D%D0%BA%D0%B7%D0%B0%D0%BC%D0%B5%D0%BD%D0%B0.htm -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><script>
 				localStorage.clear();
 				localStorage.setItem("upd", 0);
@@ -30,7 +28,7 @@
 		<p>
 		</p>
             <!--<p>Просьба не перезагружать страницу и не переключаться по вкладкам!</p>-->
-            <span id="ten-countdown">1:39:49</span>
+            <span id="ten-countdown">01:49</span>
         </div>
     </header>
     <div class="empty" style="height: 0px;"></div>
@@ -100,7 +98,7 @@
 			<input type="hidden" name="l" value="2">				
 			<input type="hidden" name="type" value="0">	
 			<input type="hidden" name="g_id" value="">	
-            <input class="button" name="send" id="notclicker" type="submit" value="Отправить">      
+            <input class="button" name="send" id="clicker" type="submit" value="Отправить">      
     </section>
 	  </form>
 	<div class="fadeBlock" align="center" style="display: none;">
