--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- saved from url=(0048)https://session.kgmu.kz/student/student_exam.php -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><script>
 				localStorage.clear();
 				localStorage.setItem("upd", 0);
