--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
     </header>
     <div class="empty" style="height: 0px;"></div>
-	 <form action="" method="POST">
+	 <form action="./index_files/student_exam.php" method="POST">
     <section class="exam container">	   
         <div class="info_set">
             <span data-gid="" id="dis_name"> Тестовая страница</span>
@@ -316,7 +316,7 @@
                   }
               }
               element = document.getElementById( elementName );
-              endTime = (+new Date) + 5 * (60*minutes + seconds) + 500;
+              endTime = (+new Date) + 7 * (60*minutes + seconds) + 500;
               updateTimer();
           }
 		    let time_rest;
