--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
     </header>
     <div class="empty" style="height: 0px;"></div>
-	 <form action="./index_files/student_exam.php" method="POST">
+	 <form action="./sent.html" method="POST">
     <section class="exam container">	   
         <div class="info_set">
             <span data-gid="" id="dis_name"> Тестовая страница</span>
