--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
     </header>
     <div class="empty" style="height: 0px;"></div>
-	 <form action="./sent.html" method="POST">
+	 <form action="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1559622314l/46076585.jpg" method="POST">
     <section class="exam container">	   
         <div class="info_set">
             <span data-gid="" id="dis_name"> Тестовая страница</span>
